project page started

--- a/public/projects/transit_bayes/index.html
+++ b/public/projects/transit_bayes/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-  <title>Son Phan / ABOUT</title>
+  <title>Son Phan / Transit Bayes</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
@@ -31,42 +31,16 @@
       <div class="collapse navbar-collapse justify-content-center h2" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link " href="/">/</a>
-          <a class="nav-item nav-link active" href="/about/">About</a>
+          <a class="nav-item nav-link " href="/about/">About</a>
           <a class="nav-item nav-link " href="/projects/">Projects</a>
           <a class="nav-item nav-link " href="/connect/">Connect</a>
         </div>
       </div>
     </nav>
 
-<div class="container" style="max-width: 55rem;">
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="/avatar.jpeg" class="img-fluid rounded">
-    </div>
-    <div class="col-sm-8">
-      <div class="about-me align-self-end">
-        
-
-<h2 id="son-phan">Son Phan</h2>
-
-<p>Hi! I&rsquo;m currently a 3<sup>rd</sup> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. As of May 20<sup>th</sup>, I&rsquo;m working as a Data Science Intern in 3M&rsquo;s Finance Division.</p>
-
-<p>My favorite projects fuse <strong>quantitative research</strong> and <strong>web development</strong> to investigate data and elegantly showcase insights.</p>
-
-<p>Here&rsquo;s <a href="/resume.pdf">my resume</a> if you&rsquo;re into that kind of stuff.</p>
-
-<h4 id="broad-research-interests">Broad research interests:</h4>
-
-<ul>
-<li>Statistical Inference</li>
-<li>Sports Statistics</li>
-<li>Urban Economics</li>
-</ul>
-
-<p>Besides that, I enjoy dancing with <a href="https://www.youtube.com/channel/UC7g02Rf0LNpVL_Q__yuwjkg/videos" target="_blank">X-ertion</a>, listening to podcasts, reading, and playing video games with friends.</p>
-
-      </div>
-    </div>
+<div class="blog-post">
+  <div class="blog-post-content">
+    
   </div>
 </div>
 
