project section started

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
   <title>Son Phan / PROJECTS</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
@@ -49,11 +49,13 @@
         <div class="col-sm-9 date-time-title post">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview" aria-expanded="false"
             aria-controls="project-preview">
-            <i class="collapse-icon fa fa-caret-down pull-left"></i>
-                 Transit Bayes
+            <h3>
+              <i class="collapse-icon fa fa-hourglass-end pull-left"></i> 
+              &nbsp Transit Bayes
+            </h3>
           </button>
-          <div class="collapse card-body" id="project-preview">
-            <p> Some preview </p>
+          <div class="collapse card" id="project-preview">
+            <p>Need to convert my post from blogdown</p>
           </div>
         </div>
       </div>
