--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
   <title>Son Phan / ABOUT</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
@@ -51,9 +51,9 @@
 
 <p>Hi! I&rsquo;m currently a 3<sup>rd</sup> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. As of May 20<sup>th</sup>, I&rsquo;m working as a Data Science Intern in 3M&rsquo;s Finance Division.</p>
 
-<p>My favorite projects fuse <strong>quantitative research</strong> and <strong>web development</strong> to investigate data and elegantly showcase insights.</p>
+<p>My favorite projects fuse quantitative research, web development, and interactive visualization to investigate and elegantly showcase data.</p>
 
-<p>Here&rsquo;s <a href="/resume.pdf">my resume</a> if you&rsquo;re into that kind of stuff.</p>
+<p>Here&rsquo;s <a href="/resume.pdf" target="_blank">my resume</a> if you&rsquo;re into that kind of stuff.</p>
 
 <h4 id="broad-research-interests">Broad research interests:</h4>
 
