--- a/public/projects/transit_bayes/index.html
+++ b/public/projects/transit_bayes/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
   <title>Son Phan / Transit Bayes</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
@@ -40,7 +40,8 @@
 
 <div class="blog-post">
   <div class="blog-post-content">
-    
+    <p>Need to convert my post from blogdown</p>
+
   </div>
 </div>
 
