performance issues of random walk home

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div style="text-align: center;">
-  <a href="https://github.com/sp314/A-Random-Walk-Home">a random walk home</a>
+  <a href="https://github.com/sp314/A-Random-Walk-Home" target="_blank">a random walk home</a>
 </div>
 
 <script type="text/javascript" src="//d3js.org/d3.v3.min.js"></script>
@@ -54,7 +54,7 @@
 <script type="text/javascript" src="js/random_walk_map.js"></script>
 <script type="text/javascript" src="js/vietnam.js"></script>
 <script type="text/javascript" src="js/hawaii.js"></script>
-<script type="text/javascript" src="js/minnesota.js"></script>
+
 
 </div> 
 
