--- a/public/about/index.html
+++ b/public/about/index.html
@@ -40,14 +40,14 @@
 
 <div class="container" style="max-width: 55rem;">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="avatar col-sm-4">
       <img src="/avatar.jpeg" class="img-fluid rounded">
     </div>
     <div class="col-sm-8">
       <div class="about-me align-self-end">
         
 
-<h2 id="son-phan">Son Phan</h2>
+<h1 id="son-phan">Son Phan</h1>
 
 <p>Hi! I&rsquo;m currently a 3<sup>rd</sup> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. As of May 20<sup>th</sup>, I&rsquo;m working as a Data Science Intern in 3M&rsquo;s Finance Division.</p>
 
