halfway through connect

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 <script type="text/javascript" src="js/random_walk_map.js"></script>
 <script type="text/javascript" src="js/vietnam.js"></script>
 <script type="text/javascript" src="js/hawaii.js"></script>
-
+<script type="text/javascript" src="js/minnesota.js"></script>
 
 </div> 
 
