project menu + working on post formatting

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -44,7 +44,7 @@
     <li>
       
 
-      <div class="row" id="posts">
+      <div class="row" id="posts" style="margin: 10px 10px 25px 0px">
         <div class="d-none d-sm-block col-sm-3 date-time-title" style="text-align: center; margin: auto;">
           <time>19 Apr 2019</time>
         </div>
@@ -53,12 +53,18 @@
             aria-controls="project-preview_0">
             <h3>
               <i class="collapse-icon fa fa-hourglass-end pull-left"></i> 
-              &nbsp A Tutorial on Non-Parametric Kernel Density Estimation
+              &nbsp A Tutorial on Kernel Density Estimation
             </h3>
           </button>
-          <div class="collapse card" id="project-preview_0" style="font-family: 'Ubuntu', sans-serif;">
-            <p>A primer on non-parametric statistics in the form of kernel density estimation. Made in collaboration with Zhen Tan</p>
-            <a href="/project/kde/">READ</a>
+          <div class="collapse card" id="project-preview_0" style="font-family: 'Ubuntu', sans-serif; font-size: 1rem;">
+            <div class="description">
+              <p>A primer on non-parametric statistics in the form of kernel density estimation. Made in collaboration with Zhen Tan</p>
+              <div class="text-center">
+                <a href="/project/kde/" class="btn btn-primary text-center">
+                  <i class="fas fa-book-open"></i> &nbsp READ
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -67,7 +73,7 @@
     <li>
       
 
-      <div class="row" id="posts">
+      <div class="row" id="posts" style="margin: 10px 10px 25px 0px">
         <div class="d-none d-sm-block col-sm-3 date-time-title" style="text-align: center; margin: auto;">
           <time>18 Apr 2019</time>
         </div>
@@ -79,9 +85,15 @@
               &nbsp Transit Bayes
             </h3>
           </button>
-          <div class="collapse card" id="project-preview_1" style="font-family: 'Ubuntu', sans-serif;">
-            <p>A Bayesian spatial analysis of the effect of transit access on home valuation in Minneapolis, MN</p>
-            <a href="/project/transit-bayes/">READ</a>
+          <div class="collapse card" id="project-preview_1" style="font-family: 'Ubuntu', sans-serif; font-size: 1rem;">
+            <div class="description">
+              <p>A Bayesian spatial analysis of transit access and home valuation in Minneapolis, MN</p>
+              <div class="text-center">
+                <a href="/project/transit-bayes/" class="btn btn-primary text-center">
+                  <i class="fas fa-book-open"></i> &nbsp READ
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
