--- a/public/project/kde/index.html
+++ b/public/project/kde/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
-  <title>Son Phan / A Tutorial on Non-Parametric Kernel Density Estimation</title>
+  <title>Son Phan / A Tutorial on Kernel Density Estimation</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
