added code folding and fixed project page styles

--- a/content/project/kde.html
+++ b/content/project/kde.html
@@ -4,10 +4,9 @@ author: ["Son Phan", "Zhen Tan"]
 date: '2019-04-19'
 categories: ["R"]
 summary: "A primer on non-parametric statistics in the form of kernel density estimation. Made in collaboration with Zhen Tan"
-image:
-  caption: ''
-  focal_point: ''
+
 bibliography: kde.bib
+code_folding: true
 ---
 
 
