--- a/public/project/kde/index.html
+++ b/public/project/kde/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
   <title>Son Phan / A Tutorial on Non-Parametric Kernel Density Estimation</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=r&amp;skin=desert"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
 
@@ -41,7 +42,7 @@
   
 
 
-<p><img src="/img/3DKDE.png" /></p>
+<p><img src="/img/3DKDE.png" style="width: 100%;"/></p>
 <div id="introduction" class="section level1">
 <h1>1. Introduction</h1>
 <p>Nonparametric statistics is a field that has been rapidly developing over the last decade. Its development has been aided by the various benefits it has relative to classical statistical techniques:</p>
@@ -66,7 +67,7 @@
   \hat{f}(s) = \displaystyle \frac{1}{N}\sum_{i = 0}^{K-1}\frac{n_i}{a_i - a_{i - 1}}I_{(a_{i - 1}, a_i]}(s)
 \end{equation}\]</span></p>
 <p>However, there are problems with this. First, histograms tend to be blocky and sensitive to bins chosen.</p>
-<pre class="r"><code>some_data &lt;- rchisq(n = 100, df = 5)
+<pre class="r prettyprint rounded lang-r linenums"><code>some_data &lt;- rchisq(n = 100, df = 5)
 hist_bins &lt;- function(data, bins) {
   ggplot(mapping = aes(x = data, y=..density..)) +
   geom_histogram(bins = bins, fill = &quot;darkorchid4&quot;) + 
@@ -95,7 +96,7 @@ grid.arrange(hist_bins(some_data, 10),
   \hat{f}_N(x) = \frac{1}{Nh} \sum_{i = 1}^{N} K\left(\frac{x - X_i}{h}\right)
 \end{equation}\]</span></p>
 <p>Above, <span class="math inline">\(K\)</span> is our kernel/weighting function. The gaussian kernel function is very apparent in this low bandwidth (<span class="math inline">\(h=0.3\)</span>) computation below. We look at a <span class="math inline">\(N = 100\)</span> sample from Binom<span class="math inline">\((100, 0.5)\)</span>.</p>
-<pre class="r"><code>binom_data &lt;- rbinom(n = 10000, size = 20, prob = 0.5)
+<pre class="r prettyprint rounded lang-r linenums"><code>binom_data &lt;- rbinom(n = 10000, size = 20, prob = 0.5)
 ggplot(mapping = aes(x = binom_data)) +
   geom_histogram(mapping = aes(y = ..density..), bins = 10, fill = &quot;darkorchid4&quot;) + 
   geom_density(kernel = &quot;gaussian&quot;, bw = 0.3, color = &quot;#d2bf55&quot;, size = 1)</code></pre>
