preparing for sports ranking post

--- a/content/project/transit-bayes.html
+++ b/content/project/transit-bayes.html
@@ -2,7 +2,7 @@
 title: "Transit Bayes"
 author: "Son Phan"
 categories: ["R"]
-summary: "A Bayesian spatial analysis of transit access and home valuation in Minneapolis, MN"
+summary: "A Bayesian spatial analysis of the link between transit access and home valuation in Minneapolis, MN"
 date: '2019-04-30'
 tags: ["Transit", "Bayes", "Spatial"]
 bibliography: transit-bayes.bib
