--- a/content/project/kde.html
+++ b/content/project/kde.html
@@ -1,5 +1,5 @@
 ---
-title: A Tutorial on Non-Parametric Kernel Density Estimation
+title: The Math Behind Kernel Density Estimation
 author: ["Son Phan", "Zhen Tan"]
 date: '2019-04-19'
 categories: ["R"]
@@ -12,7 +12,7 @@ code_folding: true
 
 <p><img src="/img/3DKDE.png" style="width: 100%;"/></p>
 <div id="introduction" class="section level1">
-<h1>1. Introduction</h1>
+<h1>1. Intro</h1>
 <p>Nonparametric statistics is a field that has been rapidly developing over the last decade. Its development has been aided by the various benefits it has relative to classical statistical techniques:</p>
 <ul>
 <li>We can relax assumptions on the probability distribution of the data. Most notably, the normality.</li>
