--- a/public/connect/index.html
+++ b/public/connect/index.html
@@ -39,7 +39,7 @@
     </nav>
 
 <div class="container" style="max-width: 25rem; text-align: center;">
-    <p>If you&rsquo;re interested in my work you can reach me at sphan@macalester.edu</p>
+    <p>If you&rsquo;re interested in my work you can reach me at <a href="mailto:sphan@macalester.edu">sphan@macalester.edu</a></p>
 
     <div class="row" style="padding-top: 10px; display:inline-block;">
         <a href="mailto:sphan@macalester.edu" style="color: #DBD56E;" class="email social">
