--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,30 +41,21 @@
 <div class="container" style="max-width: 55rem;">
   <div class="row">
     <div class="avatar col-sm-4">
-      <img src="/img/avatar.jpeg" class="img-fluid rounded">
+      <img src="/img/avatar.jpg" class="img-fluid rounded">
     </div>
     <div class="col-sm-8">
       <div class="about-me align-self-end">
-        
-
-<h1 id="son-phan">Son Phan</h1>
-
-<p>Hi! I&rsquo;m currently a 3<sup>rd</sup> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. As of May 20<sup>th</sup>, I&rsquo;m working as a Data Science Intern in 3M&rsquo;s Finance Division.</p>
-
-<p>My favorite projects fuse quantitative research, web development, and interactive visualization to investigate and elegantly showcase data.</p>
-
-<p>Here&rsquo;s <a href="/resume.pdf" target="_blank">my resume</a> if you&rsquo;re into that kind of stuff.</p>
-
+        <h1 id="son-phan">Son Phan</h1>
+<p>Hi! I&rsquo;m currently a 3<!-- raw HTML omitted -->rd<!-- raw HTML omitted --> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. I&rsquo;m working on a variety of research questions in school ranging from evaluating Bayesian predictive accuracy measures to how public transit shutdowns affect traffic throughout an urban area. I&rsquo;m currently abroad in Osaka, Japan on the CET program.</p>
+<p>Here&rsquo;s <!-- raw HTML omitted -->my resume<!-- raw HTML omitted --> if you&rsquo;re into that kind of stuff.</p>
 <h4 id="broad-research-interests">Broad research interests:</h4>
-
 <ul>
-<li>Computational Statistical Inference</li>
+<li>Computational Inference</li>
+<li>Bayesian Inference</li>
 <li>Interactive Data Visualization</li>
-<li>Sports Statistics</li>
 <li>Urban Economics</li>
 </ul>
-
-<p>Besides that, I enjoy dancing with <a href="https://www.youtube.com/channel/UC7g02Rf0LNpVL_Q__yuwjkg/videos" target="_blank">X-ertion</a>, listening to podcasts, reading, and playing video games with friends.</p>
+<p>Besides that, I enjoy dancing with <!-- raw HTML omitted -->X-ertion<!-- raw HTML omitted -->, listening to podcasts, reading, and playing video games with friends.</p>
 
       </div>
     </div>
