--- a/public/about/index.html
+++ b/public/about/index.html
@@ -46,11 +46,11 @@
     <div class="col-sm-8">
       <div class="about-me align-self-end">
         <h1 id="son-phan">Son Phan</h1>
-<p>Hi! I&rsquo;m currently a 3<!-- raw HTML omitted -->rd<!-- raw HTML omitted --> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. I&rsquo;m working on a variety of research questions in school ranging from evaluating Bayesian predictive accuracy measures to how public transit shutdowns affect traffic throughout an urban area. I&rsquo;m currently abroad in Osaka, Japan on the CET program.</p>
+<p>I&rsquo;m currently a 4<!-- raw HTML omitted -->th<!-- raw HTML omitted --> year student at Macalester College studying Applied Math/Statistics, Economics, and Japanese. I&rsquo;m interested in analyzing variability and robustness guarantees of high-dimensional, complex statistical machine learning models. In summer 2020 I am doing machine learning research at the University of Maryland under Dr. Furong Huang through the REU-CAAR program.</p>
 <p>Here&rsquo;s <!-- raw HTML omitted -->my resume<!-- raw HTML omitted --> if you&rsquo;re into that kind of stuff.</p>
 <h4 id="broad-research-interests">Broad research interests:</h4>
 <ul>
-<li>Computational Inference</li>
+<li>High Dimensional Statistics</li>
 <li>Bayesian Inference</li>
 <li>Interactive Data Visualization</li>
 <li>Urban Economics</li>
