--- a/public/project/index.html
+++ b/public/project/index.html
@@ -46,17 +46,46 @@
 
       <div class="row" id="posts" style="margin: 10px 10px 25px 0px">
         <div class="d-none d-sm-block col-sm-3 date-time-title" style="text-align: center; margin: auto;">
-          <time>30 Apr 2019</time>
+          <time>01 Jul 2020</time>
         </div>
         <div class="col-sm-9 date-time-title post">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview_0"
             aria-expanded="false" aria-controls="project-preview_0">
             <h3>
               <i class="collapse-icon fa fa-hourglass-end pull-left" style="color: #743d9a;"></i>
-              &nbsp Transit Bayes
+              &nbsp Learning Fair Representations
             </h3>
           </button>
           <div class="collapse card" id="project-preview_0" style="font-size: 1rem;">
+            <div class="description">
+              <p>Given a dataset with a sensitive attribute (e.g gender, race) we look to obtain a representation of the data that has the same dimension as the original data, preserves as much of information in the original data as possible, and de-correlates the sensitive attribute</p>
+              <div class="text-center">
+                <a href="/project/lfr/" class="btn text-center">
+                  <i class="fas fa-book-open"></i> &nbsp READ
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+    
+    <li>
+      
+
+      <div class="row" id="posts" style="margin: 10px 10px 25px 0px">
+        <div class="d-none d-sm-block col-sm-3 date-time-title" style="text-align: center; margin: auto;">
+          <time>30 Apr 2019</time>
+        </div>
+        <div class="col-sm-9 date-time-title post">
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview_1"
+            aria-expanded="false" aria-controls="project-preview_1">
+            <h3>
+              <i class="collapse-icon fa fa-hourglass-end pull-left" style="color: #743d9a;"></i>
+              &nbsp Transit Bayes
+            </h3>
+          </button>
+          <div class="collapse card" id="project-preview_1" style="font-size: 1rem;">
             <div class="description">
               <p>A Bayesian spatial analysis of the link between transit access and home valuation in Minneapolis, MN</p>
               <div class="text-center">
@@ -78,14 +107,14 @@
           <time>19 Apr 2019</time>
         </div>
         <div class="col-sm-9 date-time-title post">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview_1"
-            aria-expanded="false" aria-controls="project-preview_1">
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#project-preview_2"
+            aria-expanded="false" aria-controls="project-preview_2">
             <h3>
               <i class="collapse-icon fa fa-hourglass-end pull-left" style="color: #743d9a;"></i>
-              &nbsp The Math Behind Kernel Density Estimation
+              &nbsp Kernel Density Estimation Tutorial
             </h3>
           </button>
-          <div class="collapse card" id="project-preview_1" style="font-size: 1rem;">
+          <div class="collapse card" id="project-preview_2" style="font-size: 1rem;">
             <div class="description">
               <p>A primer on non-parametric statistics in the form of kernel density estimation. Made in collaboration with Zhen Tan</p>
               <div class="text-center">
