--- a/content/project/kde.html
+++ b/content/project/kde.html
@@ -1,14 +1,12 @@
 ---
-title: The Math Behind Kernel Density Estimation
+title: Kernel Density Estimation Tutorial
 author: ["Son Phan", "Zhen Tan"]
 date: '2019-04-19'
-categories: ["R"]
 summary: "A primer on non-parametric statistics in the form of kernel density estimation. Made in collaboration with Zhen Tan"
 bibliography: kde.bib
 code_folding: true
+link-citations: true
 ---
-
-
 
 <p><img src="/img/3DKDE.png" style="width: 100%;"/></p>
 <div id="introduction" class="section level1">
