--- a/public/project/kde/index.html
+++ b/public/project/kde/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono&display=swap" rel="stylesheet">
-  <title>Son Phan / The Math Behind Kernel Density Estimation</title>
+  <title>Son Phan / Kernel Density Estimation Tutorial</title>
   <script src="https://kit.fontawesome.com/15a8dd2038.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=r&amp;skin=desert"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
